[package]
name = "left_right_struct"
version = "0.0.1"
description = "Lockfree primitive for concurent read and write access to data."
repository = "https://github.com/Rosdf/left_right_struct"
readme = "README.md"
license = "MIT OR Apache-2.0"
keywords = ["lockfree", "concurrency", "left_right"]
categories = ["Concurrency"]
edition = "2021"
rust-version = "1.72"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arc-swap = "1.6.0"
triomphe = {version = "0.1.9", features = ["arc-swap"]}